[project]
name = "major-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.7.4",
    "ipywidgets>=8.0.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "open-clip-torch>=2.23.0",
    "opencv-python>=4.8.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "streamlit>=1.28.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "tqdm>=4.66.0",
    "transformers>=4.35.0",
]
